# codex-path-rules

./: AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES
.github/workflows/: ci.yml  release.yml
src/: glob.rs  hook.rs  lib.rs  main.rs  pathutil.rs  payload.rs  render.rs  rules.rs  selftest.rs  session.rs  touched.rs
tests/: cli.rs
