[package]
name = "codex-path-rules"
version = "0.2.0"
edition = "2024"
rust-version = "1.96.0"
description = "Path-scoped Codex hook that loads .claude/rules only when matching files are touched"
license = "MIT"
repository = "https://github.com/bengous/codex-path-rules"
readme = "README.md"
keywords = ["codex", "hooks", "rules", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde_json = "1.0.150"
sha2 = "0.11.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
